onclick con 2 funciones

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <span onclick="getPopularMovies()">Peliculas populares</span>
+        <span onclick="getPopularMovies();cambiar()">Peliculas populares</span>
         <span>Ultimas pelicilas</span>
     </header>
     <main class="movies">
