cambio backgrounds de colores

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <span onclick="getPopularMovies();cambiar()">Peliculas populares</span>
-        <span onclick="getComingMovies();cambiar()">Ultimas pelicilas</span>
+        <span onclick="getPopularMovies();backgroundBlanco()">Peliculas populares</span>
+        <span onclick="getComingMovies();backgroundAmarillo()">Ultimas pelicilas</span>
     </header>
     <main class="movies">
        
