--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <span onclick="getPopularMovies();backgroundBlanco()">Peliculas populares</span>
+        <span onclick="getPopularMovies();backgroundAzul()">Peliculas populares</span>
         <span onclick="getComingMovies();backgroundAmarillo()">Ultimas pelicilas</span>
     </header>
     <main class="movies">
