retoques en detalles de pelicula y botones

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <span onclick="getPopularMovies();backgroundAzul()">Peliculas populares</span>
-        <span onclick="getComingMovies();backgroundAmarillo()">Ultimas pelicilas</span>
+        <span onclick="getComingMovies();backgroundAmarillo()">Proximos estrenos</span>
     </header>
     <main class="movies">
        
